err/usfm-tools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.1.10.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/usfm_tools'...
Listing './lib/python3.5/site-packages/usfm_tools/support'...
Compiling './lib/python3.5/site-packages/usfm_tools/support/abstractRenderer.py'...
***   File "./lib/python3.5/site-packages/usfm_tools/support/abstractRenderer.py", line 34
    print 'Skipped unknown tokens: {0}'.format(', '.join(set(self.unknowns)))
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/usfm_tools/support/asciiRenderer.py'...
***   File "./lib/python3.5/site-packages/usfm_tools/support/asciiRenderer.py", line 32
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/usfm_tools/support/contextRenderer.py'...
***   File "./lib/python3.5/site-packages/usfm_tools/support/contextRenderer.py", line 47
    print s.encode('ascii', 'ignore')
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/usfm_tools/support/csvRenderer.py'...
***   File "./lib/python3.5/site-packages/usfm_tools/support/csvRenderer.py", line 33
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/usfm_tools/support/htmlRenderer.py'...
***   File "./lib/python3.5/site-packages/usfm_tools/support/htmlRenderer.py", line 48
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/usfm_tools/support/loutRenderer.py'...
***   File "./lib/python3.5/site-packages/usfm_tools/support/loutRenderer.py", line 62
    self.f.write(ur"""@Include { oebbook }
@Book
    @Title {}
    @Author {}
    @Edition {}
    @Publisher {}
    @BeforeTitlePage {}
    @OnTitlePage {}
    @AfterTitlePage {}
    @AtEnd {}
    @InitialLanguage { English }
    @PageOrientation { Portrait }
    @PageHeaders { Titles }
    @ColumnNumber { 1 }
    @FirstPageNumber { 1 }
    @IntroFirstPageNumber { 1 }
    @OptimizePages { No }
    @GlossaryText { @Null }
    @IndexText { @Null }
    @IndexAText { @Null }
    @IndexBText { @Null }
//

""".encode('utf-8'))
                                          
     
             
              
               
                 
                       
                   
                      
             
                                
                                 
                           
                       
                          
                               
                         
                           
                        
                         
                         
  

  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/usfm_tools/support/mdRenderer.py'...
***   File "./lib/python3.5/site-packages/usfm_tools/support/mdRenderer.py", line 30
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/usfm_tools/support/mediawikiPrinter.py'...
***   File "./lib/python3.5/site-packages/usfm_tools/support/mediawikiPrinter.py", line 136
    print '     ' + bookName
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/usfm_tools/support/oldhtmlRenderer.py'...
***   File "./lib/python3.5/site-packages/usfm_tools/support/oldhtmlRenderer.py", line 44
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/usfm_tools/support/readerise.py'...
***   File "./lib/python3.5/site-packages/usfm_tools/support/readerise.py", line 290
    print "    ** Parsing"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/usfm_tools-0.0.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
